Borrow immutable UTF-8 across calls